<resources>
    <string name="user_register">注册</string>
    <string name="user_close">关闭</string>
    <string name="user_welcome_pms">欢迎使用多邦路云</string>
    <string name="user_login_phone">手机号快捷登录</string>
    <string name="user_login_account">账号密码登录</string>
    <string name="user_get_back_pwd">找回密码</string>
    <string name="user_more_option">更多选项</string>

    <string name="user_account">账号</string>
    <string name="user_login_account_hint">请输入账号</string>
    <string name="user_account_clear">清空</string>
    <string name="user_password">密码</string>
    <string name="user_login_password_hint">请输入密码</string>
    <string name="user_login_password_show">显示/隐藏密码</string>
    <string name="user_login">登录</string>
    <string name="user_phone">手机号</string>
    <string name="user_login_phone_hint">请输入手机号</string>
    <string name="user_login_contract_1">已经阅读并同意</string>
    <string name="user_login_contract_2">和</string>
    <string name="user_login_contract_server">服务协议</string>
    <string name="user_login_contract_private">隐私政策</string>
    <string name="read_contract">是否已阅读</string>
    <string name="back">返回</string>
    <string name="user_sscode_send_success">验证码已发送至手机</string>
    <string name="user_sscode_hint">请输入验证码</string>
    <string name="user_sscode_help">收不到验证码？</string>
    <string name="user_sscode_tip">还没收到验证码？请先确认手机是否安装了短信拦截软件或是否欠费停机。若均不是，请再尝试以下方式</string>
    <string name="user_sscode_resend">重发验证码</string>
    <string name="user_sscode_activate_account">激活验证码已发至手机</string>
    <string name="user_sscode_activate_tip">账号在创建时已绑定该手机号，如若手机号不正确，请联系管理员更改。</string>
    <string name="user_new_register">新用户注册</string>
    <string name="user_sscode">验证码</string>
    <string name="user_input_phone_hint">请输入手机号</string>
    <string name="user_sscode_button">获取验证码</string>
    <string name="user_nickname">昵称</string>
    <string name="user_input_nickname_hint">请输入昵称</string>
    <string name="user_perfect_info">完善用户信息</string>
    <string name="user_finish">完成</string>
    <string name="user_menu">菜单</string>
    <string name="title_activity_invitation_code">InvitationCodeActivity</string>
    <string name="user_org_invitation_code">组织邀请码</string>
    <string name="user_input_invitation_code">请输入邀请码</string>
    <string name="user_commit">提交</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_user_avatar">头像</string>
    <string name="text_personal_info">个人信息</string>
    <string name="text_account">账号</string>
    <string name="text_phone">手机号</string>
    <string name="text_email">邮箱</string>
    <string name="text_company">所在企业</string>
    <string name="text_department">所属部门</string>
    <string name="text_system_role">系统角色</string>
    <string name="text_org_role">组织角色</string>
    <string name="user_text_switch_login">切换登录方式</string>
    <string name="text_user_name_update">昵称修改</string>
    <string name="text_contacts">联系人</string>
    <string name="text_top_contacts">常用联系人</string>
    <string name="text_org_structure">组织架构</string>
    <string name="text_my_org_group">我的群组</string>
    <string name="text_my_friend">我的好友</string>
</resources>
