<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="18dp"
    android:paddingTop="48dp"
    android:paddingEnd="18dp"
    tools:context=".login.PhoneLoginFragment">

    <TextView
        android:id="@+id/tv_phone_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/user_phone"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_phone_login"
        android:layout_width="1dp"
        android:layout_height="9dp"
        android:layout_marginStart="14dp"
        android:background="#cfcfcf"
        app:layout_constraintBottom_toBottomOf="@id/tv_phone_login"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_login"
        app:layout_constraintTop_toTopOf="@id/tv_phone_login" />

    <EditText
        android:id="@+id/input_phone_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:background="@null"
        android:hint="@string/user_login_phone_hint"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_phone_login"
        app:layout_constraintLeft_toRightOf="@id/line_phone_login"
        app:layout_constraintRight_toLeftOf="@id/clear_phone_login"
        app:layout_constraintTop_toTopOf="@id/tv_phone_login"
        android:inputType="number"
        tools:ignore="Autofill,TextFields" />

    <ImageView
        android:id="@+id/clear_phone_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_account_clear"
        app:srcCompat="@drawable/ic_login_edit_clear"
        app:layout_constraintBottom_toBottomOf="@id/tv_phone_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_phone_login" />

    <View
        android:id="@+id/line_match_phone_login"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"
        android:background="#cfcfcf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_phone_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp">

        <CheckBox
            android:id="@+id/read_contract"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:clickable="true"
            android:button="@null"
            android:background="@drawable/check_contract"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/read_contract"
            android:focusable="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login_contract_1"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="2dp"/>
        <TextView
            android:id="@+id/contract_server_phone_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login_contract_server"
            android:textSize="12sp"
            android:textColor="@color/linkable_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login_contract_2"
            android:textSize="12sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/contract_private_phone_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login_contract_private"
            android:textSize="12sp"
            android:textColor="@color/linkable_text"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_phone_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="1"
        android:background="@drawable/user_fillet_login_button"
        android:text="@string/user_login"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>