<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background"
    tools:context="com.duobang.user.invitationCode.InvitationCodeActivity">

    <TextView
        android:id="@+id/logout_invitation_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_text_switch_login"
        android:textColor="@color/linkable_text"
        android:textSize="14sp"
        android:padding="12dp"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/card_shape"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_org_invitation_code"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_invitation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:hint="@string/user_input_invitation_code"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/commit_invitation_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="12dp"
            android:text="@string/user_commit"
            android:textColor="@color/linkable_text"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>