<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/close_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/user_close"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_login_close" />

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="110dp"
            app:srcCompat="@drawable/ic_pms_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_login"
            android:layout_marginStart="29dp"
            android:layout_marginTop="12dp"
            android:text="@string/user_welcome_pms"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

    </FrameLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TextView
            android:id="@+id/switch_login_may"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="64dp"
            android:text="@string/user_login_phone"
            android:textColor="@color/linkable_text"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="24dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/get_back_pwd_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_get_back_pwd"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="14dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:background="#cfcfcf" />

            <TextView
                android:id="@+id/more_option_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_more_option"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>